syntax = "proto3";

package component_a_service;

service ComponentA {
    rpc GetValue(ComponentAMessage) returns (ComponentAResponse) {}
}

message ComponentAMessage {
}

message ComponentAResponse {
    int32 value = 1;
}
