syntax = "proto3";

package component_a_service;

service RemoteA {
    rpc AGetValue(AGetValueMessage) returns (AGetValueReturnMessage) {}
}

message AGetValueMessage {
}

message AGetValueReturnMessage {
    uint32 value = 1;
}
